--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">Calc24</string>
+
+    <string name="menu_about">About</string>
+    <string name="menu_clear">Clear</string>
+
+    <string name="about_details">
+        Calc24 %s
+        \ndeveloper: MervynLam</string>
 </resources>
