--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,9 @@
     <string name="menu_about">About</string>
     <string name="menu_clear">Clear</string>
 
+    <string name="dlg_about_title">About</string>
+    <string name="dlg_about_positive">OK</string>
     <string name="about_details">
-        Calc24 %s
-        \ndeveloper: MervynLam</string>
+        Calc24 - version: %1$s
+        \nDeveloper: MervynLam</string>
 </resources>
